# MinesweeperGame

./: CMakeLists.txt  GUIFunctions.cpp  GUIFunctions.h  HowToPlay.txt  README.md  functions.cpp  functions.h  main.cpp  run.sh  scoreboard.scrb  scoreboardGUI.scrb
art/: Black.txt
sounds/: Music.flac  click.flac  explode.flac  losemusic.flac  win.flac
widgets/: BabyBlue.txt  TransparentGrey.txt
